    + [CL] Actually check for a dependency on sensible-utils before
      emitting script-needs-depends-on-sensible-utils.  Thanks to Daniel
      Reichelt for the detailed bug report.  (Closes: #877439)
  * checks/standards-version.desc:
    + [CL] Correct invalid link to upgrading-checklist. Thanks to Dann
      Frazier for the report.  (Closes: #878184)
  * checks/watch-file.{pm,desc}:
    + [CL] Warn for debian/watch files using insecure URIs such as HTTP or
      FTP, similar to vcs-field-uses-insecure-uri.  (Closes: #849515)

  * data/{common => fields}/priorities:
    + [NT] Rename file.
  * data/fields/essential:
    + [MR] Remove 'mount' from the essential packages.  Starting with
      util-linux version 2.29.2-3 the Essential flag has been removed.
      (Closes: #877511)
  * data/fields/priorities:
    + [NT] Remove "extra".
  * data/files/privacy-breaker-websites:
    + [CL] Replace (eg.) "You may use libjs-prototype package" with "You
      may use the libjs-prototype package".

  * commands/lintian.pm:
    + [NT] Simplify handling of uncaught exceptions.

  * doc/lintian.xml:
    + [NT] Document that the XDG_DATA_HOME directory can be used for
      user profiles and data files.  This has been supported for quite
      a while but the documentation incorrectly listed "$HOME/.lintian"
      instead (which in fact did not work for this purpose).
      (Closes: #701477)

  * frontend/dplint:
    + [NT] Restore "$HOME/.lintian" as a directory that is used for
      user profiles and data files.  It was advertised as such in the
      documentation but the code actually only used the XDG_DATA_HOME
      path.  Thanks to Daniel Kauffman for the report.  (Closes: #875636)
    + [NT] Correct the order of restricted search paths (user directories
      and /etc/lintian).  It incorrectly used /etc/lintian before the
      user directory.

  * lib/Lintian/Util.pm:
    + [NT] Rename the "fail" subroutine to "internal_error" to better
      reflect its purpose.
