@@ -7,3 +7,4 @@ Test-For:
  systemd-service-file-refers-to-obsolete-target
  systemd-service-file-missing-documentation-key
  systemd-service-file-missing-install-key
+ systemd-service-file-wraps-init-script
